crates/hid-pxn-protocol/tests/snapshots/snapshot_tests__snapshot_product_name_unknown.snap
---
source: crates/hid-pxn-protocol/tests/snapshot_tests.rs
expression: "pxn::product_name(0xFFFF)"
---
None
