crates/hid-pxn-protocol/tests/snapshots/snapshot_tests__snapshot_product_name_v12.snap
---
source: crates/hid-pxn-protocol/tests/snapshot_tests.rs
expression: "pxn::product_name(pxn::PRODUCT_V12)"
---
Some(
    "PXN V12",
)
